--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,12 @@
+table .center {
+    text-align: center;
+}
+
+table tr td,
+table tr th {
+    vertical-align: middle !important;
+}
+
 .title {
     margin: 15px 0;
 }
