--- a/public/css/app.css
+++ b/public/css/app.css
@@ -190,3 +190,13 @@ form.formuppertext input {
 .contextual_message {
     padding: 3px 10px;
 }
+
+.suggest {
+    margin-bottom: 20px;
+    margin-left: calc(50% - 100px);
+    width: 200px;
+}
+
+#space_verify ul {
+    padding-bottom: 0px;
+}
