--- a/public/css/app-black.css
+++ b/public/css/app-black.css
@@ -15,14 +15,14 @@
 }
 
 .black-ground .table-striped > tbody > tr:nth-of-type(2n+1) {
-    background-color: #2A2B2B;
+    background-color: #909090;
 }
 
 .black-ground .active-diriment {
-    background-color: #3F4040 !important;
+    background-color: #858484 !important;
 }
 
 .black-ground .result-final {
-    background-color: #393D3D !important;
+    background-color: #616161 !important;
     color: #fff300 !important;
 }
